exports[`BpkButton should render correctly 1`] = `
<button
  className="bpk-button"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with "large" and "secondary" attributes 1`] = `
<button
  className="bpk-button bpk-button--secondary bpk-button--large"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with a "disabled" attribute 1`] = `
<button
  className="bpk-button"
  disabled={true}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with a "href" attribute 1`] = `
<a
  className="bpk-button"
  href="#"
  onClick={null}>
  My button
</a>
`;

exports[`BpkButton should render correctly with a "large" attribute 1`] = `
<button
  className="bpk-button bpk-button--large"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with a "link" attribute 1`] = `
<button
  className="bpk-button bpk-button--link"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with a "secondary" attribute 1`] = `
<button
  className="bpk-button bpk-button--secondary"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;

exports[`BpkButton should render correctly with a "selected" attribute 1`] = `
<button
  className="bpk-button bpk-button--selected"
  disabled={false}
  onClick={null}
  type="button">
  My button
</button>
`;
